src/objects/sma__MARoute__c.object
<CustomObject>
    <fields>
        <fullName>sma__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sma__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnything_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Route</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>